[package]
name = "gltfunroll"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
glam = { version = "0.30", features = ["serde"] }
gltf = "1"
gltf-json = "1"
idm = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
